add automated subnavs to OSS-WIP[#119325635]

--- a/boshlite/index.html.md.erb
+++ b/boshlite/index.html.md.erb
@@ -10,6 +10,5 @@ owner: Release Integration
 * [Install BOSH-Lite](https://github.com/cloudfoundry/bosh-lite/blob/master/README.md#install-bosh-lite): Use the VirtualBox or AWS providers to spin up BOSH-Lite.
 
 ## Step 2: Deploy Cloud Foundry ##
-
-* [Create a Deployment Manifest for Cloud Foundry on BOSH-Lite](create_a_manifest.html)
+* <a class="subnav" href="create_a_manifest.html">Create a Deployment Manifest for Cloud Foundry on BOSH-Lite</a>
 * [Deploying Cloud Foundry using BOSH](../common/deploy.html): Deploy!
