--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -22,11 +22,20 @@ Cloud Foundry itself.
 
 Select one of the core supported infrastructures below to get started:
 
-* [AWS](aws/index.html)
-* [OpenStack](openstack/index.html)
-* [vSphere](vsphere/index.html)
-* [vCloud Air or vCloud Director](vcloud/index.html)
+* <a class="subnav" href="aws/index.html">AWS</a>
+* <a class="subnav" href="openstack/index.html">OpenStack</a>
+* <a class="subnav" href="vsphere/index.html">vSphere</a>
+* <a class="subnav" href="vcloud/index.html">vCloud Air or vCloud Director</a>
 
 Or, if you just want the `vagrant up` experience, use BOSH-Lite:
 
-* [BOSH-Lite](boshlite/index.html)
+* <a class="subnav" href="boshlite/index.html">BOSH-Lite</a>
+
+Review the following topics for more information on deploying Cloud Foundry:
+
+* <a class="subnav" href="common/create_a_manifest.html">Create a Deployment Manifest for Cloud Foundry</a>
+* <a class="subnav" href="common/deploy.html">Deploying Cloud Foundry using BOSH</a>
+* <a href="../concepts/high-availability.html">Scaling Cloud Foundry</a>
+* <a class="subnav" href="common/log_drain_blacklists.html">Log Drain Blacklist Configuration</a>
+* <a class="subnav" href="common/consul-security.html">Security Configuration for Consul</a>
+* <a class="subnav" href="community-services.html">Deploying Community Services</a>
