--- a/openstack/index.html.md.erb
+++ b/openstack/index.html.md.erb
@@ -7,10 +7,10 @@ owner: Release Integration
 
 ## Step 1: Environment Setup ##
 
-* [Validate your OpenStack Instance](validate_openstack.html)
-* [Security Group for Cloud Foundry on OpenStack](security_group.html): Create a Security Group
-* [DNS Setup for Cloud Foundry on OpenStack](set-up-dns.html)
-* [Required Instance Flavors for Cloud Foundry on OpenStack](required-flavors.html): Confirm that your OpenStack instance has the required instance flavors.
+* <a class="subnav" href="validate_openstack.html">Validate your OpenStack Instance</a>
+* <a class="subnav" href="security_group.html">Security Group for Cloud Foundry on OpenStack</a>: Create a Security Group
+* <a class="subnav" href="set-up-dns.html">DNS Setup for Cloud Foundry on OpenStack</a>
+* <a class="subnav" href="required-flavors.html">Required Instance Flavors for Cloud Foundry on OpenStack</a>: Confirm that your OpenStack instance has the required instance flavors.
 
 ## Step 2: Deploy BOSH ##
 
@@ -19,9 +19,10 @@ owner: Release Integration
 ## Step 3: Deploy Cloud Foundry ##
 
 * [Create a Deployment Manifest for Cloud Foundry](../common/create_a_manifest.html)
+* <a class="subnav" href="cf-stub.html">Customizing the Cloud Foundry Deployment Manifest Stub for OpenStack</a>
 * [Deploying Cloud Foundry using BOSH](../common/deploy.html): Deploy!
 
 ## Advanced and Support Topics ##
 
-* [Troubleshooting Cloud Foundry on OpenStack](troubleshooting.html)
-* [Using OpenStack Swift as a Cloud Foundry Blobstore](using_swift_blobstore.html)
+* <a class="subnav" href="troubleshooting.html">Troubleshooting Cloud Foundry on OpenStack</a>
+* <a class="subnav" href="using_swift_blobstore.html">Using OpenStack Swift as a Cloud Foundry Blobstore</a>
