--- a/vcloud/index.html.md.erb
+++ b/vcloud/index.html.md.erb
@@ -7,7 +7,7 @@ owner: Release Integration
 
 ## Step 1: Environment Setup ##
 
-* [Set up vCloud Air or vCloud Virtual Data Center Resources](setup_vcloud.html): Configure a virtual datacenter for the installation. This configuration will also instruct you to deploy a jump box in your virtual datacenter from which you will drive the rest of the installation.
+* <a href="setup_vcloud.html" class="subnav">Set up vCloud Air or vCloud Virtual Data Center Resources</a>: Configure a virtual datacenter for the installation. This configuration will also instruct you to deploy a jump box in your virtual datacenter from which you will drive the rest of the installation.
 
 ## Step 2: Deploy BOSH ##
 
@@ -16,4 +16,5 @@ owner: Release Integration
 ## Step 3: Deploy Cloud Foundry ##
 
 * [Create a Deployment Manifest for Cloud Foundry](../common/create_a_manifest.html)
+* <a href="../vcloud-stub.html" class="subnav">Customizing the Cloud Foundry Deployment Manifest Stub for vSphere, vCloud Air, or vCloud Director</a>
 * [Deploying Cloud Foundry using BOSH](../common/deploy.html): Deploy!
