--- a/vsphere/index.html.md.erb
+++ b/vsphere/index.html.md.erb
@@ -7,7 +7,7 @@ owner: Release Integration
 
 ## Step 1: Environment Setup ##
 
-* [Privileges Required for vCenter User](vcenter_user_privileges.html): Ensure you have credentials with sufficient vCenter user permissions.
+* <a href="vcenter_user_privileges.html" class="subnav">Privileges Required for vCenter User</a>: Ensure you have credentials with sufficient vCenter user permissions.
 
 ## Step 2: Deploy BOSH ##
 
@@ -16,4 +16,5 @@ owner: Release Integration
 ## Step 3: Deploy Cloud Foundry ##
 
 * [Create a Deployment Manifest for Cloud Foundry](../common/create_a_manifest.html)
+* <a href="../common/vsphere-vcloud-cf-stub.html" class="subnav">Customizing the Cloud Foundry Deployment Manifest Stub for vSphere, vCloud Air, or vCloud Director</a>
 * [Deploying Cloud Foundry using BOSH](../common/deploy.html): Deploy!
