--- a/aws/index.html.md.erb
+++ b/aws/index.html.md.erb
@@ -25,13 +25,14 @@ To complete this deployment, you need:
 
 ##<a id="env-setup"></a> Step 1: Environment Setup ##
 
-* [Setting up an AWS Environment for Cloud Foundry with BOSH AWS Bootstrap](setup_aws.html): Use the BOSH AWS Bootstrap tool `bosh aws create` to create an environment on AWS that includes a VPC and other structures that support BOSH.
+* <a class="subnav" href="setup_aws.html">Bootstrapping an AWS Environment for Cloud Foundry</a>: Use the BOSH AWS Bootstrap tool `bosh aws create` to create an environment on AWS that includes a VPC and other structures that support BOSH.
 
 ## <a id="deploy-bosh"></a> Step 2: Deploy BOSH ##
 
-* [Deploying BOSH on AWS](setup_bosh_aws.html): Create a manifest for BOSH, and pass it to `bosh-init` to deploy BOSH in your environment.
+* <a class="subnav" href="setup_bosh_aws.html">Deploying BOSH on AWS</a>: Create a manifest for BOSH, and pass it to `bosh-init` to deploy BOSH in your environment.
 
 ## <a id="deploy-cf"></a> Step 3: Deploy Cloud Foundry ##
 
 * [Create a Deployment Manifest for Cloud Foundry](../common/create_a_manifest.html)
+* <a href="cf-stub.html" class="subnav">Customizing the Cloud Foundry Deployment Manifest Stub for AWS</a>
 * [Deploying Cloud Foundry using BOSH](../common/deploy.html): Deploy!
