adds generating ccdb encryption key[#128167731]

--- a/aws/cf-stub.html.md.erb
+++ b/aws/cf-stub.html.md.erb
@@ -141,7 +141,7 @@ properties:
       Replace <code>BULK_API_PASSWORD</code> with a password of your choosing. Health Manager uses this password to access the Cloud Controller bulk API.
       <br /><br />
       Replace <code>CCDB_ENCRYPTION_KEY</code>
-      with a secure key that you generate to encrypt sensitive values in the Cloud Controller database.
+      with a secure key that you generate to encrypt sensitive values in the Cloud Controller database. Any random string can be used. For example, run <code>$ md5 -qs "$(date)"</code> to generate a string.
     </td>
   </tr>
   <tr>
