--- a/common/vsphere-vcloud-cf-stub.html.md.erb
+++ b/common/vsphere-vcloud-cf-stub.html.md.erb
@@ -116,7 +116,7 @@ properties:
     <br /><br />
     Replace <code>CCDB_ENCRYPTION_KEY</code>
     with a secure key that you generate to encrypt sensitive values in the
-    Cloud Controller database.
+    Cloud Controller database. Any random string can be used. For example, run <code>$ md5 -qs "$(date)"</code> to generate a string.
     </td>
   </tr>
   <tr>
