adds generating ccdb encryption key[#128167731]

--- a/openstack/cf-stub.html.md.erb
+++ b/openstack/cf-stub.html.md.erb
@@ -117,7 +117,7 @@ properties:
     <br /><br />
     Replace <code>CCDB_ENCRYPTION_KEY</code>
     with a secure key that you generate to encrypt sensitive values in the
-    Cloud Controller database. Any random string can be used. For example, run <code>$ md5 -qs "$(date)"</code>.
+    Cloud Controller database. Any random string can be used. For example, run <code>$ md5 -qs "$(date)"</code> to generate a string.
     </td>
   </tr>
   <tr>
